Update ReadMe to add project setup instructions